[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.14.2", features = ["jpeg"]}
benimator = "4.1.3"
bevy_ecs_tilemap = "0.14.0"
bevy_ecs_ldtk = "0.10.0"
bevy_rapier2d = "0.27.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
